--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,29 @@
 #Wed Nov 05 09:43:12 WIB 2025
 micronaut.application.name=authorizer
 
-micronaut.security.enabled=true
-micronaut.security.token.jwt.enabled=true
+# Matikan semua autoconfig yang tidak perlu
+micronaut.security.enabled=false
+micronaut.security.token.enabled=false
+micronaut.security.token.jwt.generator.enabled=false
+micronaut.security.token.jwt.validator.enabled=false
+micronaut.security.token.jwt.signatures.jwks.enabled=false
+micronaut.security.token.jwt.signatures.secret.enabled=false
+micronaut.http.client.enabled=false
+micronaut.http.client.read-timeout=5s
+micronaut.http.client.connect-timeout=3s
+micronaut.http.client.pool.enabled=false
+micronaut.http.client.follow-redirects=false
+micronaut.http.services.default.enabled=false
 
 # === GENERATE TOKEN (RS256) ===
 pem.public.path=classpath:kuroraijin-public.pem
 
 # === MONGODB ===
-mongodb.uri=${MONGODB_URI:mongodb://localhost:27017/api_db}
-mongodb.auth.database=${AUTH_DATABASE}
+mongodb.uri=mongodb+srv://d3v-user:IMQH2ts10Jk1qgF1@cluster-prod-isc.wtumg4a.mongodb.net/kuroraijin_db?retryWrites=true&w=majority
+mongodb.auth.database=kuroraijin_db
 
-# === MONGODB ===
-aws.accountid=${ACCOUNT_ID}
+# === AWS ACCOUNT ID ===
+aws.accountid=590183859840
 
 # === Optional ===
 micronaut.security.token.jwt.claims.iss=kuroraijin-app
